--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pista 2 Iturcemi</title>
+    <title>WPC</title>
   </head>
   <body class="dark text-foreground bg-background">
     <div id="root"></div>
